 * Flickr::API::Response Be more consistent using my ($self, $args,...) = @_; and not shift
 * Added MAKETEST_OAUTH_AUTHED=1 and/or MAKETEST_FLICKR_AUTHED=1 for testing to allow testing
   actual calls without re-authenticating
 * Added more info on testing to README
 * changes to tests for authentication to allow bypassing
 * changes to tests to detect if deprecated key/secret become api_key/api_secret 
 * changed script/flickr_dump_stored_config.pl to allow config file to be passed in ARGV
 * changed script/flickr_make_stored_config.pl to shift configs from key/secret to
   api_key/api_secret for Flickr Authentication and warn if key/secret are used.

1.27, 2015-12-02 
 * Get Flickr::API::People into shape for the Tools.
 * Added some methods for asking about a people object's
   calling user and searched user.

1.26, 2015-11-17
 * Removed references to oauth_token and oauth_token_secret since they
   are redundant.
 * Get some spelling consistent
 * Tidy up a test script

1.25, 2015-10-12
 * Realizing that there is benefit to keeping Flickr::API as close to
   perl core as practical and letting Flickr::Tools use Moo and more
   abstraction, stopped moving all of Flickr::Tools into Flickr::API.
*  Moved Person.pm and Types.pm to Flickr::Tools.
*  Bumped version by five to keep it ahead of Tools, at least for
   the time being.

1.20, 2015-10-05
 * moved Cameras.pm, Reflection.pm and People.pm  to new 
   status reporting.
 * Added Person.pm for the flickr.people methods other than finds
 * Added tests for Person.pm
 * Updated the MANIFEST
 * Add tests to 02-oauth_api.t for new script and for private method
 * Added Types.pm to define types for Moo types
 * Consider splitting the Tools back into a separate distribution 
   so Moo isn't required for the base API.

1.19, 2015-09-16
 * adding Flickr::API::People for the flickr.people methods that find
 * adding t/09-people.t to test People module
 * fixed Reflection.pm for argument lists that are only 1 deep.